feat: css 초기 세팅 cdn 적용

--- a/gible/public/index.html
+++ b/gible/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> </head>
+  <head> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+  </head>
   <body>
     <div id="root"></div>
   </body>
