feat: 1overflow-x hidden 설정

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <link rel="stylesheet" as="style" crossorigin
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+  <style>html{overflow-x: hidden;}</style>  
 </head>
 
 <body>
